--- a/client/src/scss/main.scss
+++ b/client/src/scss/main.scss
@@ -1,3 +1,61 @@
-body {
-  background: green;
+.main-view-container {
+  margin-top: 10px;
+}
+
+.user {
+  padding: 0;
+  margin: 0 5px;
+  border: solid 1px #eee;
+  border-radius: 5px;
+  position: relative;
+  overflow: hidden;
+
+  .content {
+    margin: 15px;
+  }
+
+  img {
+    max-width: 100%;
+    border-radius: 100%;
+    margin: 10px 0 20px;
+  }
+
+  .login-name {
+    text-transform: uppercase;
+    color: #777;
+    letter-spacing: 0.1em;
+    text-align: center;
+  }
+
+  .bet-box {
+    input {
+      max-width: 100%;
+      text-align: right;
+    }
+  }
+
+  .fa-lock {
+    display: none;
+  }
+
+  &.locked {
+    .lock-container {
+      width: 100%;
+      height: 100%;
+      position: absolute;
+      background: rgba(0,0,0,0.5);
+      .fa-lock {
+        display: block;
+        margin: auto;
+        top: 0;
+        bottom: 0;
+        right: 0;
+        left: 0;
+        width: 20px;
+        height: 20px;
+        position: absolute;
+        font-size: 3em;
+      }
+    }
+  }
 }
