--- a/client/src/scss/main.scss
+++ b/client/src/scss/main.scss
@@ -56,6 +56,18 @@
     display: none;
   }
 
+  .finalist-header {
+    border: solid 1px #aaa;
+    border-radius: 5px;
+    text-align: center;
+    text-transform: uppercase;
+    font-size: 10px;
+    padding: 5px 0px 3px;
+    color: white;
+    background: #337ab7;
+    margin: 5px 0;
+  }
+
   .score-box {
     border: 1px solid #ccc;
     border-radius: 5px;
@@ -76,8 +88,7 @@
     border-radius: 5px;
     display: block;
     margin: auto;
-    top: 0;
-    bottom: 0;
+    top: 45px;
     right: 0;
     left: 0;
     // transform: translate(-50%, -50%);
@@ -93,23 +104,24 @@
     }
   }
 
-  &.locked {
+  &.locked, &.player-lost {
     .lock-container {
       width: 100%;
       height: 100%;
       position: absolute;
       background: rgba(0,0,0,0.5);
-      .meesage {
+      .message {
         display: block;
         margin: auto;
         top: 0;
         bottom: 0;
         right: 0;
         left: 0;
-        transform: translate(-50%, -50%);
         position: absolute;
         padding: 10px;
         color: white;
+        text-align: center;
+        height: 40px;
       }
       .fa-lock {
         display: block;
