--- a/client/src/scss/main.scss
+++ b/client/src/scss/main.scss
@@ -138,3 +138,12 @@
     }
   }
 }
+
+.login-container {
+  margin-top: 100px;
+}
+
+.not-enough-users-notice {
+  text-align: center;
+  margin-top: 100px;
+}
